ghc-4335c07/testsuite/tests/module/mod4.hs
-- !!! Exporting unknown constructor
module M(T(K1,K2)) where
data T = K1
